--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.10.0",
+    "@react-pdf-viewer/core": "^3.12.0",
     "@types/bcryptjs": "^2.4.6",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
@@ -21,7 +22,8 @@
     "next": "15.3.4",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-pdf": "^10.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
